--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -9,15 +9,14 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>application</artifactId>
+    <artifactId>domain</artifactId>
     <dependencies>
         <dependency>
-            <groupId>com.baeldung</groupId>
-            <artifactId>domain</artifactId>
-            <version>1.0.0</version>
-            <scope>compile</scope>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
-
 
 </project>
