--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <version>1.0.0</version>
     <modules>
         <module>application</module>
+        <module>domain</module>
     </modules>
     <packaging>pom</packaging>
 
