--- a/pom.xml
+++ b/pom.xml
@@ -12,5 +12,8 @@
         <module>domain</module>
     </modules>
     <packaging>pom</packaging>
-
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 </project>
